Fix content scrolling on IE.

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,4 @@
-/* Empty. Add your own CSS if you like */
+/* Without this, content area is not scrollable on Windows Phone */
+body {
+  -ms-content-zooming: none;
+}
